# fastapi-with-mongodb

./: .gitignore  README.md  database.py  main.py  pyproject.toml
models/: common.py  student.py
routes/: student.py
