[tool.poetry]
name = "fastapi-with-mongodb"
version = "0.1.0"
description = ""
authors = ["Eunjeong Park <ejolie.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pymongo = {extras = ["srv"], version = "^4.5.0"}
motor = "^3.3.1"
pydantic = {extras = ["email"], version = "^2.4.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
